--- a/dev/sass/theme/typography.scss
+++ b/dev/sass/theme/typography.scss
@@ -70,11 +70,13 @@ ul, ol {
   }
 }
 @each $bp, $bp-value in $breakpoints {
-  .#{$bp}--text-align {
-    &--left     { text-align: left; }
-    &--center   { text-align: center; }
-    &--right    { text-align: right; }
-    &--inherit  { text-align: inherit; }
+  @media #{$bp-value} {
+    .#{$bp}--text-align {
+      &--left     { text-align: left; }
+      &--center   { text-align: center; }
+      &--right    { text-align: right; }
+      &--inherit  { text-align: inherit; }
+    }
   }
 }
 @mixin caps {
